--- a/index.html
+++ b/index.html
@@ -184,20 +184,25 @@
 <div id="popup" class="popup">
     <div class="popup-content">
         <span class="close-button" onclick="cerrarPopup()">×</span>
-        <h1>Regístrate y participa en Nuestro Sorteo</h1>
+        <h1>Regístrate y participa en Nuestro Sorteo de 100€ Para Gastar En Tienda</h1>
         <span>Participación única</span>
         <form id="sorteoForm">
-            <input type="text" placeholder="Nombre" required><br>
-            <input type="tel" id="phone" placeholder="Teléfono" required><br>
-            <input type="email" id="email" placeholder="Email" required><br>
+            <input type="text" name="name" placeholder="Nombre" required><br>
+            <input type="tel" id="phone" name="phone" placeholder="Teléfono" required><br>
+            <input type="email" id="email" name="email" placeholder="Email" required><br>
+            <label for="lastProduct">Último Producto Comprado</label> <br>
+            <input type="text" id="lastProduct" name="lastProduct" required><br>
+            <label for="province">Tu Provincia / Localidad</label> <br>
+            <input type="text" id="province" name="province" required><br>
             <span id="phoneError" style="display:none;color:red;">Teléfono inválido, debe tener al menos 10 dígitos.</span><br>
             <div>
-                <input type="checkbox" required> <span>Acepto <a href="#">Las políticas de esta empresa</a></span>
+                <input type="checkbox" id="accept" required> <span>Acepto <a href="#">Las políticas de esta empresa</a></span>
             </div>
-            <button type="submit" class="popup-button">Registrarme</button>
+            <button type="submit" class="popup-button">Participar en el Sorteo</button>
         </form>
     </div>
 </div>
+
 
 
 
@@ -294,23 +299,26 @@ telefonoInput.addEventListener("input", function () {
     }
 });
 
-form.addEventListener('submit', function(event) {
+document.getElementById('sorteoForm').addEventListener('submit', function(event) {
     event.preventDefault();
 
-    const inputName = encodeURIComponent(form.querySelector('input[type="text"]').value);
-    const inputEmailClient = encodeURIComponent(form.querySelector('input[type="text"]').value);
-    const inputPhone = encodeURIComponent(telefonoInput.value.replace(/\s+/g, ''));
-    const clientEmail = encodeURIComponent("seleccionjuangomez@gmail.com");
+    const form = event.target;
+    const inputName = encodeURIComponent(form.querySelector('input[name="name"]').value);
+    const inputEmailClient = encodeURIComponent(form.querySelector('input[name="email"]').value);
+    const inputPhone = encodeURIComponent(form.querySelector('input[name="phone"]').value.replace(/\s+/g, ''));
+    const inputLastProduct = encodeURIComponent(form.querySelector('input[name="lastProduct"]').value);
+    const inputProvince = encodeURIComponent(form.querySelector('input[name="province"]').value);
+    const clientEmail = encodeURIComponent("");
 
     // Enviar datos solo si el teléfono tiene al menos 10 dígitos
     if (inputPhone.replace(/\D/g, '').length < 10) {
-        phoneError.style.display = 'block';
+        document.getElementById('phoneError').style.display = 'block';
         return;
     } else {
-        phoneError.style.display = 'none';
+        document.getElementById('phoneError').style.display = 'none';
     }
 
-    const url = `?clientEmail=${clientEmail}&leadName=${inputName}&leadPhone=${inputPhone}&clientEmail=${inputEmailClient}`;
+    const url = `your-server-endpoint?clientEmail=${clientEmail}&leadName=${inputName}&leadPhone=${inputPhone}&leadEmail=${inputEmailClient}&lastProduct=${inputLastProduct}&province=${inputProvince}`;
 
     fetch(url, {
         method: 'POST',
@@ -328,11 +336,20 @@ form.addEventListener('submit', function(event) {
     .then(result => {
         console.log(result);
         // Aquí puedes añadir código para mostrar algún mensaje de confirmación al usuario
+        document.getElementById('popup').style.display = 'none';
+        alert("Registro exitoso. ¡Buena suerte en el sorteo!");
     })
     .catch(error => {
+        console.error('Error:', error);
         document.getElementById('popup').style.display = 'none';
+        alert("Hubo un error al registrar tu participación. Por favor, inténtalo nuevamente.");
     });
 });
+
+function cerrarPopup() {
+    document.getElementById('popup').style.display = 'none';
+}
+
  
 
 </script>
